<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="neto.com.mx.conteocedisciclicos.SeleccionaZonaActivity">

    <LinearLayout
        android:id="@+id/cabecero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorMoradoActivo"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/txtNombreUbicacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_btn_activo"
                android:textAlignment="center"
                android:textColor="@color/colorBlanco"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/selecciona_zona"
                android:textAlignment="center"
                android:textColor="@color/colorBlanco" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnTodasZonas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/boton_todas_zonas"
                android:onClick="seleccionaTodasZonas"
                android:padding="18dp"
                android:text="Todas las zonas"
                android:textAllCaps="false"
                android:textColor="@color/colorBlanco"
                android:textIsSelectable="false"
                android:textSize="20sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">


                <GridLayout
                    android:id="@+id/gridEnScroll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center">

                </GridLayout>
            </ScrollView>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="false"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnRegresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBoton"
            android:onClick="regresarSeleccionUbicacion"
            android:text="@string/txt_btn_regresar"
            android:textAllCaps="false"
            android:textColor="@color/colorBlanco"
            android:textIsSelectable="false"
            android:textSize="20sp"
            android:textStyle="normal" />


    </LinearLayout>

</RelativeLayout>
